--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.10.4",
     "ethers": "^5.0.32",
     "lowdb": "^1.0.0",
+    "node-fetch": "^2.6.1",
     "snoowrap": "^1.22.0"
   }
 }
